--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html {{{ meta.inject().htmlAttrs.text() }}}>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
+  {{{ meta.inject().title.text() }}}
+  {{{ meta.inject().meta.text() }}}
+
 </head>
 <body>
   <!--vue-ssr-outlet-->
