--- a/public/index.template.html
+++ b/public/index.template.html
@@ -2,8 +2,9 @@
 <html {{{ meta.inject().htmlAttrs.text() }}}>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="/favicon.ico">
   {{{ meta.inject().title.text() }}}
   {{{ meta.inject().meta.text() }}}
 
